--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,209 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  padding: 0px;
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body i{
+  cursor: pointer;
+}
+
+.header{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.horizontal-nav{
+  display: flex;
+  border: 1px solid none;
+  /* padding: 20px 0; */
+}
+
+.logo{
+  display: flex;
+  border: 1px solid none;
+}
+
+.logo img {
+  height: auto;
+  aspect-ratio: 3/2;
+  width: 100%;
+  object-fit: contain;
+  position: relative;
+  cursor: pointer;
+  left: 20px;
+}
+
+.logo-img{
+  left: 0;
+  right: 0;
+  margin-left: 5px;
+}
+
+.search input{
+  height: 45px;
+  width: 80%;
+  border-radius: 25px 0 0 25px ;
+  margin-right: 0px;
+  border: 1px solid  rgb(213, 212, 212);
+  padding-left: 15px;
+  font-size: 20px;
+}
+
+.search{
+  height: 35px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.search-button{
+  cursor: pointer;
+  height: inherit;
+  position: relative;
+  border: 1px solid rgb(213, 212, 212);
+  left: 0;
+  float: right;
+  height: 45px;
+  width: 20%;
+  border-radius: 0 25px 25px 0;
+}
+
+
+.search-section{
+  display: flex;
+  width: 50%;
+  padding-top: 20px;
+}
+
+.account-details{
+  display: flex;
+  padding: 20px;
+  margin-left: auto;
+}
+
+.account-icon{
+  border: 1px solid none;
+  border-radius: 50%;
   color: white;
+  justify-content: center;
+  display: flex;
+  background-color:rgb(139, 18, 38);
+  padding: 2px;
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.toggle-vertical {
+  display: flex;
+  width: 25%;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ng {
+  position: relative;
+  font-size: small;
+  bottom: 10px;
+  right: 7px;
+}
+
+.open-menu img{
+  width: auto;
+  height: auto;
+  /* margin-top: 25px; */
+}
+
+.mic{
+  /* margin-top: 15px;    */
+  margin-left: 20px;
+  border: 1px solid none;
+  height: 54px;
+  background-color: rgb(236, 236, 236);
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+  border-radius:50%;
+}
+
+.search form{
+  width: 100%;
+} 
+
+.open-menu{
+  height: fit-content;
+}
+
+/* .open-menu img{
+  width: 20px;
+  height: 40px;
+} */
+
+.account-details i {
+  margin-top: 30px;
+  margin-right: 20px;
+}
+
+
+
+/* Side section */
+.nav-link {
+  display: flex;
+  padding-left: 5px;
+  margin-left: 25px;
+  margin-block: 0px;
+  padding-block: 0px;
+  width: auto;
+  height: 40px;
+  /* border: 1px solid black; */
+}
+
+.nav-link:hover{
+  border: 1px solid none;
+  cursor: pointer;
+  border-radius: 6px;
+  background-color: rgb(245, 245, 245);
+}
+
+
+::-webkit-scrollbar{
+    width: 7px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background: none;
+}
+
+
+
+::-webkit-scrollbar-thumb{
+    background:transparent;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background:grey;
+    border-radius: 5px;
+}
+
+.side-section:hover::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 5px;
+}
+
+.side-section{
+  height: 100vh;
+  border: 1px solid none;
+  width: 15%;
+  overflow-y: scroll;
+  padding-bottom: 100px;
+  min-width: 150px;
 }
